force-app/main/default/objects/OrderDeliveryGroup/fields/ContactPointAddress__c.field-meta.xml
<CustomField>
    <fullName>ContactPointAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Point Address</label>
    <referenceTo>ContactPointAddress</referenceTo>
    <relationshipLabel>Order Delivery Groups</relationshipLabel>
    <relationshipName>Order_Delivery_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>