force-app/main/default/objects/OrderDeliveryGroup/fields/DeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>DeliveryMethod__c</fullName>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SHIP-TO-CUSTOMER</fullName>
            </value>
            <value>
                <fullName>CUSTOMER-PICKUP</fullName>
            </value>
            <value>
                <fullName>DELIVER-TO-CP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>