force-app/main/default/objects/OrderDeliveryGroup/fields/PorcelanosaAddress__c.field-meta.xml
<CustomField>
    <fullName>PorcelanosaAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Porcelanosa Address</label>
    <referenceTo>PorcelanosaAddress__c</referenceTo>
    <relationshipLabel>Order Delivery Groups</relationshipLabel>
    <relationshipName>Order_Delivery_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>