force-app/main/default/objects/OrderDeliveryGroup/fields/SAPId__c.field-meta.xml
<CustomField>
    <fullName>SAPId__c</fullName>
    <description>Delivery address&apos; SAP Id (taken from Contact Point Address or Account)</description>
    <label>SAP Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>